# fusion-mcp

./: README.md  pyproject.toml
.github/workflows/: ci.yml
addon/: Fusion360MCP.manifest  Fusion360MCP.py
addon/server/: __init__.py  command_handler.py  event_bridge.py  socket_server.py
scripts/: install-addon.sh
src/fusion360_mcp/: connection.py  mock.py  server.py  tools.py
tests/: test_mock.py  test_server.py  test_tools.py
