[project]
name = "fusion360-mcp-server"
version = "0.1.0"
description = "MCP server for Autodesk Fusion 360 — bridges Claude to the Fusion360MCP add-in"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Faust Machines" }]
dependencies = [
    "anyio>=4.5",
    "click>=8.1",
    "mcp>=1.0",
]

[project.urls]
Homepage = "https://github.com/faust-machines/fusion360-mcp-server"
Repository = "https://github.com/faust-machines/fusion360-mcp-server"
Issues = "https://github.com/faust-machines/fusion360-mcp-server/issues"

[project.scripts]
fusion360-mcp-server = "fusion360_mcp:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]
